# Surykatki

./: BruteForce.cpp  BruteForce.h  BruteForce.hpp  CMakeLists.txt  Controller.hpp  Crocodile.hpp  Generator.hpp  Graph.hpp  Pixel.hpp  PixelMap.hpp  Point.hpp  Raster.hpp  Solver.cpp  Solver.h  Statistics.hpp  Surykatki.exe.stackdump  UniqueSet.hpp  in.txt  main.cpp  msg  out.txt  readme.txt  test.txt
Statistics/: Testy.xlsx  bruteForceBig.txt  bruteForceFull.txt  rasterBig.txt  rasterFull.txt
